[package]
name = "web"
version = "0.1.0"
edition = "2021"
authors = ["Mac Lawson <mlawson07@protonmail.com>"]
description = "A short description of my package"
documentation = "https://github.com/mac-lawson/web/"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.17", features = ["blocking"] }