[package]
name = "weblib"
version = "0.1.2"
edition = "2021"
authors = ["Mac Lawson <mlawson07@protonmail.com>"]
description = "The Rust weblib Library is a small, simple library for fetching the contents of a URL and returning them as a string."
documentation = "https://github.com/mac-lawson/web/"
homepage = "https://github.com/mac-lawson/web"
license = "GPL-3.0"
license-file = "../LICENSE"
readme = "../README.md"
keywords = ["http", "web"]
categories = ["web-programming::http-client", "web-programming"]




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.17", features = ["blocking"] }

